# pycrawler

./: .gitignore  LICENSE  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  setup.py
examples/: demo.py  simple.py
mock_data/: eu.xml  ofac.xml  un.xml
src/sanctions_watch/: __init__.py  cli.py
src/sanctions_watch/core/: __init__.py  base.py  exceptions.py  models.py
src/sanctions_watch/crawlers/: __init__.py  eu_sanctions.py  ofac.py  uk_treasury.py  un_sanctions.py
src/sanctions_watch/processors/: deduplicator.py  enricher.py  normalizer.py
tests/: conftest.py  test_base_crawler.py
